# mvh_copy_mb

./: .env.example  .gitignore  Dockerfile  Meldebestaetigung_NCEAZ2JEV4.csv  Meldebestaetigung_ZW74OS83JI.csv  README.html  README.md  pyproject.toml
.github/workflows/: build.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook
.kiro/specs/cli-summary-statistics/: design.md  requirements.md  tasks.md
.kiro/specs/duckdb-storage/: design.md  requirements.md  tasks.md
.kiro/specs/gepado-integration/: design.md  requirements.md  tasks.md
.kiro/specs/hl7-case-id-correction/: design.md  requirements.md  tasks.md
.kiro/specs/leistungsdatum-integration/: design.md  requirements.md  tasks.md
.kiro/specs/multi-user-sync/: design.md  requirements.md  tasks.md
.kiro/specs/statistics-display/: design.md  requirements.md  tasks.md
.kiro/specs/web-frontend/: design.md  requirements.md  tasks.md
.kiro/steering/: commit-messages.md  project-setup.md
docs/: Dokumentation-Meldebestaetigung-MV-GenomSeq.md
src/mvh_copy_mb/: audit_cli.py  cli.py  database.py  gepado.py  hl7_case_id_correction.py  hl7_extraction.py  leistungsdatum_extraction.py  models.py  statistics.py  web.py  web_database.py
src/mvh_copy_mb/events/: __init__.py  broker.py
src/mvh_copy_mb/static/css/: custom.css
src/mvh_copy_mb/sync/: __init__.py  audit.py  audit_config.py  audit_manager.py  audit_scheduler.py  circuit_breaker.py  config.py  config_utils.py  conflict_resolver.py  connection_monitor.py  degradation.py  error_recovery.py  exceptions.py  interfaces.py  lock_manager.py  logging_config.py  models.py  service.py
src/mvh_copy_mb/templates/: index.html  pair_rows.html
src/mvh_copy_mb/websocket/: __init__.py  manager.py  reconnection.py
tests/: conftest.py  test_audit_trail.py  test_audit_trail_completeness.py  test_browser_frontend.py  test_checkbox_done.py  test_cli_integration_statistics.py  test_cli_statistics.py  test_database.py  test_error_handling.py  test_gepado.py  test_hl7_case_id_correction.py  test_hl7_extraction.py  test_integration.py  test_leistungsdatum_extraction.py  test_lock_manager.py  test_statistics_display.py  test_statistics_integration.py  test_sync_models.py  test_sync_service.py  test_web_database.py  test_web_endpoints.py  test_web_frontend.py  test_web_row_generation.py
